# poc-mda

./: .gitignore  Makefile  README.md  demo.py  deploy.py  onboard.py  pyproject.toml  reset.py  retrieve.py  trace.py  trigger.py
mda_platform/: __init__.py
mda_platform/control_plane/manifest_store/: __init__.py  manifest_store.py
mda_platform/control_plane/orchestrator/: __init__.py  publisher.py
mda_platform/control_plane/registry/: __init__.py
mda_platform/execution_plane/common/connectors/: evidence_store.py  sequence_counter.py
mda_platform/execution_plane/common/resolver/: runtime_resolver.py
mda_platform/execution_plane/engines/retrieval_engine/: __init__.py  interpreter.py
mda_platform/execution_plane/engines/semantic_engine/: __init__.py  interpreter.py
mda_platform/storage_plane/wild/bls/: employment_stats.csv
staging/curation/manifests/bls/: bls_employment_stats_v1.0.0.json  bls_employment_stats_v2.0.0.yaml
staging/curation/manifests/census/: census_population_v1.0.0.json  census_population_v1.1.0.json  census_population_v1.2.0.json  census_population_v1.2.1.json  census_population_v2.0.0.json  census_population_v3.0.0.json
staging/manifest_schema/: parser_registry.py
staging/manifest_schema/curation/: manifest_schema_v1.0.0.json  manifest_schema_v2.0.0.json
staging/manifest_schema/retrieval/: manifest_schema_v1.0.0.json  manifest_schema_v2.0.0.json
staging/manifest_schema/semantics/: manifest_schema_v1.0.0.json  manifest_schema_v2.0.0.json
staging/sample_data/census/: population.csv
(+43 files in other folders)
