[project]
name = "mda-poc-v2"
version = "2.0.0"
description = "Manifest-Driven Architecture POC v2 - Three-Plane Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=1.0",
    "pyspark>=3.5",
]

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
# Spark requires Java - install separately if needed
spark = ["pyspark>=3.5"]
